Aggiunti link per dashboard grafana

--- a/stagioni/2022_2023/mercati/asta-iniziale.html
+++ b/stagioni/2022_2023/mercati/asta-iniziale.html
@@ -4,6 +4,14 @@ title: Asta iniziale 2022_2023
 permalink: /2022_2023/mercati/asta-iniziale
 ---
 
+<h1>Grafici temporali</h1>
+<a href="https://snapshots.raintank.io/dashboard/snapshot/t7eFymL57QnHrTRKLv180j1wBBeli5rU">Portieri</a> -
+<a href="https://snapshots.raintank.io/dashboard/snapshot/XrSbEwlEoAWKPT7UDYeEbshxVcfMlrsr">Difensori</a> -
+<a href="https://snapshots.raintank.io/dashboard/snapshot/mMDSaB70QVYIyxt5RnQYnWWtIVrAkepG">Centrocampisti</a> - 
+<a href="https://snapshots.raintank.io/dashboard/snapshot/e9DpZrjB3WWG40ShvV236NkM9MQD3prR">Attaccanti</a>
+
+<h1>Rose</h1>
+
 {% for s in site.data.stagione_2022_2023.fantasquadre %}
 
     <h3>{{ s.squadra }}</h3>
