fix url of assets

--- a/stagioni/2022_2023/giornate/2/partite/3.html
+++ b/stagioni/2022_2023/giornate/2/partite/3.html
@@ -5,7 +5,7 @@ permalink: /2022_2023/giornate/2/partite/3
 ---
 
 <a href="..">Riepilogo</a>
-{% for item in site.data.stagione_2022_2023.giornata_2%}
+{% for item in site.data.stagione_2022_2023.giornata_2 %}
   || <a href="{{ item.id }}">
     {{ item.home }} ({{ item.score }}) {{ item.away }}
   </a>
@@ -27,122 +27,122 @@ permalink: /2022_2023/giornate/2/partite/3
     <th>FV</th>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> <b>Meret</b></span><span style="display: block"><img src="/assets/img/portiereImbattuto.png" alt="Portiere imbattuto"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_p.png" alt="P"> <b>Meret</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/portiereImbattuto.png" alt="Portiere imbattuto"></span></td>
     <td>NAP</td>
     <td>6.0</td>
     <td>7.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> <b>Provedel</b></span><span style="display: block"><img src="/assets/img/portiereImbattuto.png" alt="Portiere imbattuto"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_p.png" alt="P"> <b>Provedel</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/portiereImbattuto.png" alt="Portiere imbattuto"></span></td>
     <td>LAZ</td>
     <td>6.0</td>
     <td>7.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Dodò</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Dodò</b></span><span style="display: block"></span></td>
     <td>FIO</td>
     <td>6.0</td>
     <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <del>Kim</del></span><span style="display: block"><img src="/assets/img/out.webp" alt="Uscito"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <del>Kim</del></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/out.webp" alt="Uscito"></span></td>
     <td>NAP</td>
     <td>-</td>
     <td>-</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Bastoni</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Bastoni</b></span><span style="display: block"></span></td>
     <td>INT</td>
     <td>6.0</td>
     <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Smalling</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Smalling</b></span><span style="display: block"></span></td>
     <td>ROM</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Marusic</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Marusic</b></span><span style="display: block"></span></td>
     <td>LAZ</td>
     <td>6.0</td>
     <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Kalulu</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Kalulu</b></span><span style="display: block"></span></td>
     <td>MIL</td>
     <td>6.5</td>
     <td>6.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Calabria</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Calabria</b></span><span style="display: block"></span></td>
     <td>MIL</td>
     <td>6.0</td>
     <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Darmian</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Darmian</b></span><span style="display: block"></span></td>
     <td>INT</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Gyasi</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Gyasi</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"></span></td>
     <td>SPE</td>
     <td>6.5</td>
     <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Calhanoglu</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Calhanoglu</b></span><span style="display: block"></span></td>
     <td>INT</td>
     <td>6.5</td>
     <td>6.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Tonali</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Tonali</b></span><span style="display: block"></span></td>
     <td>MIL</td>
     <td>6.0</td>
     <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Kvaratskhelia</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Kvaratskhelia</b></span><span style="display: block"></span></td>
     <td>NAP</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Ederson D.s.</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Ederson D.s.</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"></span></td>
     <td>ATA</td>
     <td>6.0</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Sensi</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Sensi</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"><img src="{{ site.baseurl }}/assets/img/golFatto.png" alt="Gol"></span></td>
     <td>MON</td>
     <td>7.0</td>
     <td>9.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Felipe Anderson</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Felipe Anderson</b></span><span style="display: block"></span></td>
     <td>LAZ</td>
     <td>6.5</td>
     <td>6.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Rafael Leao</b></span><span style="display: block"><img src="/assets/img/espulso.png" alt="Rosso"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Rafael Leao</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/espulso.png" alt="Rosso"></span></td>
     <td>MIL</td>
     <td>5.5</td>
     <td>4.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Gabbiadini</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Gabbiadini</b></span><span style="display: block"></span></td>
     <td>SAM</td>
     <td>6.0</td>
     <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Di Francesco F.</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Di Francesco F.</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"></span></td>
     <td>LEC</td>
     <td>6.0</td>
     <td>5.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Vlahovic</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Vlahovic</b></span><span style="display: block"></span></td>
     <td>JUV</td>
     <td>5.5</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Lozano</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Lozano</b></span><span style="display: block"></span></td>
     <td>NAP</td>
     <td>5.5</td>
     <td>5.5</td>
@@ -161,78 +161,78 @@ permalink: /2022_2023/giornate/2/partite/3
     <th>FV</th>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Sirigu</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_p.png" alt="P"> Sirigu</span><span style="display: block"></span></td>
     <td>NAP</td>
     <td>-</td>
     <td>-</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Luis Maximiano</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_p.png" alt="P"> Luis Maximiano</span><span style="display: block"></span></td>
     <td>LAZ</td>
     <td>-</td>
     <td>-</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Marì</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> Marì</span><span style="display: block"></span></td>
     <td>MON</td>
     <td>6.0</td>
     <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Fazio</b></span><span style="display: block"><img src="/assets/img/espulso.png" alt="Rosso"><img src="/assets/img/in.webp" alt="Entrato"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Fazio</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/espulso.png" alt="Rosso"><img src="{{ site.baseurl }}/assets/img/in.webp" alt="Entrato"></span></td>
     <td>SAL</td>
     <td>6.5</td>
     <td>5.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Erlic</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> Erlic</span><span style="display: block"></span></td>
     <td>SAS</td>
     <td>-</td>
     <td>-</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Lucumì</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> Lucumì</span><span style="display: block"></span></td>
     <td>BOL</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Rabiot</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> Rabiot</span><span style="display: block"></span></td>
     <td>JUV</td>
     <td>-</td>
     <td>-</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Matic</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> Matic</span><span style="display: block"></span></td>
     <td>ROM</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Ikonè</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> Ikonè</span><span style="display: block"></span></td>
     <td>FIO</td>
     <td>6.0</td>
     <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Zalewski</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> Zalewski</span><span style="display: block"></span></td>
     <td>ROM</td>
     <td>-</td>
     <td>-</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Zirkzee</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> Zirkzee</span><span style="display: block"></span></td>
     <td>BOL</td>
     <td>-</td>
     <td>-</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Kean</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> Kean</span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"></span></td>
     <td>JUV</td>
     <td>4.5</td>
     <td>4.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Zanimacchia</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> Zanimacchia</span><span style="display: block"></span></td>
     <td>CRE</td>
     <td>6.0</td>
     <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Banda</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> Banda</span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"></span></td>
     <td>LEC</td>
     <td>6.5</td>
     <td>6.0</td>
