--- a/stagioni/2022_2023/giornate/1/partite/3.html
+++ b/stagioni/2022_2023/giornate/1/partite/3.html
@@ -27,122 +27,122 @@ permalink: /2022_2023/giornate/1/partite/3
     <th>FV</th>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> <b>Musso</b></span><span style="display: block"><img src="/assets/img/portiereImbattuto.png" alt="Portiere imbattuto"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_p.png" alt="P"> <b>Musso</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/portiereImbattuto.png" alt="Portiere imbattuto"></span></td>
     <td>ATA</td>
     <td>6.5</td>
     <td>7.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> <b>Meret</b></span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_p.png" alt="P"> <b>Meret</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/golSubito.png" alt="Gol Subito"></span></td>
     <td>NAP</td>
     <td>6.0</td>
     <td>5.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Mazzocchi</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Mazzocchi</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"><img src="{{ site.baseurl }}/assets/img/golFatto.png" alt="Gol"></span></td>
     <td>SAL</td>
     <td>7.0</td>
     <td>9.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Karsdorp</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Karsdorp</b></span><span style="display: block"></span></td>
     <td>ROM</td>
     <td>5.0</td>
     <td>5.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Bremer</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Bremer</b></span><span style="display: block"></span></td>
     <td>JUV</td>
     <td>6.5</td>
     <td>6.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Bastoni</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Bastoni</b></span><span style="display: block"></span></td>
     <td>INT</td>
     <td>4.5</td>
     <td>4.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <del>Singo</del></span><span style="display: block"><img src="/assets/img/out.webp" alt="Uscito"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <del>Singo</del></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/out.webp" alt="Uscito"></span></td>
     <td>TOR</td>
     <td>-</td>
     <td>-</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Erlic</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Erlic</b></span><span style="display: block"></span></td>
     <td>SAS</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Cambiaso</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Cambiaso</b></span><span style="display: block"></span></td>
     <td>BOL</td>
     <td>6.0</td>
     <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Calabria</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Calabria</b></span><span style="display: block"></span></td>
     <td>MIL</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Ilic</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Ilic</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"></span></td>
     <td>VER</td>
     <td>6.0</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Gyasi</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Gyasi</b></span><span style="display: block"></span></td>
     <td>SPE</td>
     <td>5.5</td>
     <td>5.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Koopmeiners</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Koopmeiners</b></span><span style="display: block"></span></td>
     <td>ATA</td>
     <td>5.5</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Tonali</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"><img src="/assets/img/assist.png" alt="Assist argento"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Tonali</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"><img src="{{ site.baseurl }}/assets/img/assist.png" alt="Assist argento"></span></td>
     <td>MIL</td>
     <td>7.0</td>
     <td>7.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Lukic</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Lukic</b></span><span style="display: block"></span></td>
     <td>TOR</td>
     <td>6.0</td>
     <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Ederson D.s.</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Ederson D.s.</b></span><span style="display: block"></span></td>
     <td>ATA</td>
     <td>6.5</td>
     <td>6.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Jovic</b></span><span style="display: block"><img src="/assets/img/rigoreSbagliato.png" alt="Rigore Sbagliato"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Jovic</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/rigoreSbagliato.png" alt="Rigore Sbagliato"></span></td>
     <td>FIO</td>
     <td>5.0</td>
     <td>2.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Felipe Anderson</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"><img src="/assets/img/assist.png" alt="Assist argento"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Felipe Anderson</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"><img src="{{ site.baseurl }}/assets/img/assist.png" alt="Assist argento"></span></td>
     <td>LAZ</td>
     <td>6.5</td>
     <td>7.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <del>Muriel</del></span><span style="display: block"><img src="/assets/img/out.webp" alt="Uscito"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <del>Muriel</del></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/out.webp" alt="Uscito"></span></td>
     <td>ATA</td>
     <td>-</td>
     <td>-</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Zirkzee</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Zirkzee</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"></span></td>
     <td>BOL</td>
     <td>5.5</td>
     <td>5.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Okereke</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Okereke</b></span><span style="display: block"></span></td>
     <td>CRE</td>
     <td>5.5</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <del>Vlahovic</del></span><span style="display: block"><img src="/assets/img/out.webp" alt="Uscito"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <del>Vlahovic</del></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/out.webp" alt="Uscito"></span></td>
     <td>JUV</td>
     <td>-</td>
     <td>-</td>
@@ -161,78 +161,78 @@ permalink: /2022_2023/giornate/1/partite/3
     <th>FV</th>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Consigli</span><span style="display: block"><img src="/assets/img/portiereImbattuto.png" alt="Portiere imbattuto"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_p.png" alt="P"> Consigli</span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/portiereImbattuto.png" alt="Portiere imbattuto"></span></td>
     <td>SAS</td>
     <td>6.0</td>
     <td>7.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Sirigu</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_p.png" alt="P"> Sirigu</span><span style="display: block"></span></td>
     <td>NAP</td>
     <td>-</td>
     <td>-</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Mancini</b></span><span style="display: block"><img src="/assets/img/in.webp" alt="Entrato"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Mancini</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/in.webp" alt="Entrato"></span></td>
     <td>ROM</td>
     <td>5.5</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Dodò</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> Dodò</span><span style="display: block"></span></td>
     <td>FIO</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Augello</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> Augello</span><span style="display: block"></span></td>
     <td>SAM</td>
     <td>6.0</td>
     <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Marusic</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> Marusic</span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"></span></td>
     <td>LAZ</td>
     <td>6.0</td>
     <td>5.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Pessina</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> Pessina</span><span style="display: block"></span></td>
     <td>MON</td>
     <td>5.5</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Ikonè</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> Ikonè</span><span style="display: block"></span></td>
     <td>FIO</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Zambo Anguissa</span><span style="display: block"><img src="/assets/img/assist.png" alt="Assist argento"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> Zambo Anguissa</span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/assist.png" alt="Assist argento"></span></td>
     <td>NAP</td>
     <td>6.5</td>
     <td>7.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Strefezza</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> Strefezza</span><span style="display: block"></span></td>
     <td>LEC</td>
     <td>-</td>
     <td>-</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Dia</b></span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"><img src="/assets/img/in.webp" alt="Entrato"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Dia</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/golFatto.png" alt="Gol"><img src="{{ site.baseurl }}/assets/img/in.webp" alt="Entrato"></span></td>
     <td>SAL</td>
     <td>7.0</td>
     <td>10.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Zanimacchia</b></span><span style="display: block"><img src="/assets/img/in.webp" alt="Entrato"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Zanimacchia</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/in.webp" alt="Entrato"></span></td>
     <td>CRE</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Caprari</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> Caprari</span><span style="display: block"></span></td>
     <td>MON</td>
     <td>5.5</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Gabbiadini</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> Gabbiadini</span><span style="display: block"></span></td>
     <td>SAM</td>
     <td>6.0</td>
     <td>6.0</td>
