--- a/stagioni/2022_2023/giornate/3/partite/5.html
+++ b/stagioni/2022_2023/giornate/3/partite/5.html
@@ -5,7 +5,7 @@ permalink: /2022_2023/giornate/3/partite/5
 ---
 
 <a href="..">Riepilogo</a>
-{% for item in site.data.stagione_2022_2023.giornata_3%}
+{% for item in site.data.stagione_2022_2023.giornata_3 %}
   || <a href="{{ item.id }}">
     {{ item.home }} ({{ item.score }}) {{ item.away }}
   </a>
@@ -27,122 +27,122 @@ permalink: /2022_2023/giornate/3/partite/5
     <th>FV</th>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> <b>Maignan</b></span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_p.png" alt="P"> <b>Maignan</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/golSubito.png" alt="Gol Subito"><img src="{{ site.baseurl }}/assets/img/golSubito.png" alt="Gol Subito"></span></td>
     <td>MIL</td>
     <td>6.0</td>
     <td>4.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> <b>Provedel</b></span><span style="display: block"><img src="/assets/img/portiereImbattuto.png" alt="Portiere imbattuto"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_p.png" alt="P"> <b>Provedel</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/portiereImbattuto.png" alt="Portiere imbattuto"></span></td>
     <td>LAZ</td>
     <td>6.5</td>
     <td>7.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Di Lorenzo</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Di Lorenzo</b></span><span style="display: block"></span></td>
     <td>NAP</td>
     <td>6.5</td>
     <td>6.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Darmian</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Darmian</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"></span></td>
     <td>INT</td>
     <td>6.0</td>
     <td>5.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Rodrigo Becao</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Rodrigo Becao</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"></span></td>
     <td>UDI</td>
     <td>6.5</td>
     <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Smalling</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Smalling</b></span><span style="display: block"></span></td>
     <td>ROM</td>
     <td>6.5</td>
     <td>6.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Colley</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Colley</b></span><span style="display: block"></span></td>
     <td>SAM</td>
     <td>6.0</td>
     <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Kim</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Kim</b></span><span style="display: block"></span></td>
     <td>NAP</td>
     <td>6.5</td>
     <td>6.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Biraghi</b></span><span style="display: block"><img src="/assets/img/rigoreSbagliato.png" alt="Rigore Sbagliato"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Biraghi</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/rigoreSbagliato.png" alt="Rigore Sbagliato"></span></td>
     <td>FIO</td>
     <td>5.0</td>
     <td>2.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Kalulu</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Kalulu</b></span><span style="display: block"></span></td>
     <td>MIL</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Sabiri</b></span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Sabiri</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/golFatto.png" alt="Gol"></span></td>
     <td>SAM</td>
     <td>7.0</td>
     <td>10.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Mkhitaryan</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Mkhitaryan</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"></span></td>
     <td>INT</td>
     <td>5.5</td>
     <td>5.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Luis Alberto</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Luis Alberto</b></span><span style="display: block"></span></td>
     <td>LAZ</td>
     <td>6.5</td>
     <td>6.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Sensi</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Sensi</b></span><span style="display: block"></span></td>
     <td>MON</td>
     <td>6.5</td>
     <td>6.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Candreva</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Candreva</b></span><span style="display: block"></span></td>
     <td>SAL</td>
     <td>6.0</td>
     <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Kvaratskhelia</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Kvaratskhelia</b></span><span style="display: block"></span></td>
     <td>NAP</td>
     <td>6.5</td>
     <td>6.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Caputo</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Caputo</b></span><span style="display: block"></span></td>
     <td>SAM</td>
     <td>6.0</td>
     <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Kean</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Kean</b></span><span style="display: block"></span></td>
     <td>JUV</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Abraham</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Abraham</b></span><span style="display: block"></span></td>
     <td>ROM</td>
     <td>5.5</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Di Maria</b></span><span style="display: block"><img src="/assets/img/espulso.png" alt="Rosso"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Di Maria</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/espulso.png" alt="Rosso"></span></td>
     <td>JUV</td>
     <td>4.5</td>
     <td>3.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Deulofeu</b></span><span style="display: block"><img src="/assets/img/assistSoft.png" alt="Assist bronzo"><img src="/assets/img/assist.png" alt="Assist argento"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Deulofeu</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/assistSoft.png" alt="Assist bronzo"><img src="{{ site.baseurl }}/assets/img/assist.png" alt="Assist argento"></span></td>
     <td>UDI</td>
     <td>7.5</td>
     <td>9.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Banda</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Banda</b></span><span style="display: block"></span></td>
     <td>LEC</td>
     <td>5.5</td>
     <td>5.5</td>
@@ -161,78 +161,78 @@ permalink: /2022_2023/giornate/3/partite/5
     <th>FV</th>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Audero</span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_p.png" alt="P"> Audero</span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/golSubito.png" alt="Gol Subito"><img src="{{ site.baseurl }}/assets/img/golSubito.png" alt="Gol Subito"></span></td>
     <td>SAM</td>
     <td>6.5</td>
     <td>4.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Luis Maximiano</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_p.png" alt="P"> Luis Maximiano</span><span style="display: block"></span></td>
     <td>LAZ</td>
     <td>-</td>
     <td>-</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Lykogiannis</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> Lykogiannis</span><span style="display: block"></span></td>
     <td>BOL</td>
     <td>-</td>
     <td>-</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Bereszynski</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> Bereszynski</span><span style="display: block"></span></td>
     <td>SAM</td>
     <td>5.5</td>
     <td>5.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Kjaer</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> Kjaer</span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"></span></td>
     <td>MIL</td>
     <td>6.0</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Lucumì</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> Lucumì</span><span style="display: block"></span></td>
     <td>BOL</td>
     <td>5.5</td>
     <td>5.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Bonaventura</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> Bonaventura</span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"></span></td>
     <td>FIO</td>
     <td>6.0</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Lopez M.</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> Lopez M.</span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"></span></td>
     <td>SAS</td>
     <td>5.5</td>
     <td>5.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Frattesi</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> Frattesi</span><span style="display: block"></span></td>
     <td>SAS</td>
     <td>6.0</td>
     <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Matic</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> Matic</span><span style="display: block"></span></td>
     <td>ROM</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Bonazzoli</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> Bonazzoli</span><span style="display: block"></span></td>
     <td>SAL</td>
     <td>6.0</td>
     <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Di Francesco F.</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> Di Francesco F.</span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"></span></td>
     <td>LEC</td>
     <td>5.5</td>
     <td>5.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Correa</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> Correa</span><span style="display: block"></span></td>
     <td>INT</td>
     <td>5.5</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Lozano</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> Lozano</span><span style="display: block"></span></td>
     <td>NAP</td>
     <td>-</td>
     <td>-</td>
