--- a/stagioni/2022_2023/giornate/4/partite/2.html
+++ b/stagioni/2022_2023/giornate/4/partite/2.html
@@ -5,7 +5,7 @@ permalink: /2022_2023/giornate/4/partite/2
 ---
 
 <a href="..">Riepilogo</a>
-{% for item in site.data.stagione_2022_2023.giornata_4%}
+{% for item in site.data.stagione_2022_2023.giornata_4 %}
   || <a href="{{ item.id }}">
     {{ item.home }} ({{ item.score }}) {{ item.away }}
   </a>
@@ -27,122 +27,122 @@ permalink: /2022_2023/giornate/4/partite/2
     <th>FV</th>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> <b>Provedel</b></span><span style="display: block"><img src="/assets/img/portiereImbattuto.png" alt="Portiere imbattuto"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_p.png" alt="P"> <b>Provedel</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/portiereImbattuto.png" alt="Portiere imbattuto"></span></td>
     <td>LAZ</td>
     <td>6.5</td>
     <td>7.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> <b>Falcone</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_p.png" alt="P"> <b>Falcone</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"><img src="{{ site.baseurl }}/assets/img/golSubito.png" alt="Gol Subito"></span></td>
     <td>LEC</td>
     <td>6.5</td>
     <td>5.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Bereszynski</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Bereszynski</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"></span></td>
     <td>SAM</td>
     <td>5.5</td>
     <td>5.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Soppy</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Soppy</b></span><span style="display: block"></span></td>
     <td>ATA</td>
     <td>5.5</td>
     <td>5.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Kalulu</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Kalulu</b></span><span style="display: block"></span></td>
     <td>MIL</td>
     <td>6.0</td>
     <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Rrahmani</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Rrahmani</b></span><span style="display: block"></span></td>
     <td>NAP</td>
     <td>7.0</td>
     <td>7.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Kim</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Kim</b></span><span style="display: block"></span></td>
     <td>NAP</td>
     <td>6.5</td>
     <td>6.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Bonucci</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Bonucci</b></span><span style="display: block"></span></td>
     <td>JUV</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Scalvini</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Scalvini</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"></span></td>
     <td>ATA</td>
     <td>6.0</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <del>Faraoni</del></span><span style="display: block"><img src="/assets/img/out.webp" alt="Uscito"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <del>Faraoni</del></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/out.webp" alt="Uscito"></span></td>
     <td>VER</td>
     <td>-</td>
     <td>-</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Calhanoglu</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Calhanoglu</b></span><span style="display: block"></span></td>
     <td>INT</td>
     <td>6.0</td>
     <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <del>Messias</del></span><span style="display: block"><img src="/assets/img/out.webp" alt="Uscito"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <del>Messias</del></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/out.webp" alt="Uscito"></span></td>
     <td>MIL</td>
     <td>-</td>
     <td>-</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Kvaratskhelia</b></span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Kvaratskhelia</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/golFatto.png" alt="Gol"></span></td>
     <td>NAP</td>
     <td>7.0</td>
     <td>10.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Milinkovic-Savic</b></span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Milinkovic-Savic</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/golFatto.png" alt="Gol"><img src="{{ site.baseurl }}/assets/img/golFatto.png" alt="Gol"></span></td>
     <td>LAZ</td>
     <td>7.5</td>
     <td>13.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Sensi</b></span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Sensi</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/golFatto.png" alt="Gol"></span></td>
     <td>MON</td>
     <td>7.0</td>
     <td>10.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Djuricic</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Djuricic</b></span><span style="display: block"></span></td>
     <td>SAM</td>
     <td>5.5</td>
     <td>5.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Lozano</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Lozano</b></span><span style="display: block"></span></td>
     <td>NAP</td>
     <td>6.5</td>
     <td>6.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <del>Gonzalez N.</del></span><span style="display: block"><img src="/assets/img/out.webp" alt="Uscito"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <del>Gonzalez N.</del></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/out.webp" alt="Uscito"></span></td>
     <td>FIO</td>
     <td>-</td>
     <td>-</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Rafael Leao</b></span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"><img src="/assets/img/assistGold.png" alt="Assist oro"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Rafael Leao</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/golFatto.png" alt="Gol"><img src="{{ site.baseurl }}/assets/img/assistGold.png" alt="Assist oro"></span></td>
     <td>MIL</td>
     <td>7.5</td>
     <td>12.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Martinez L.</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Martinez L.</b></span><span style="display: block"></span></td>
     <td>INT</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Banda</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Banda</b></span><span style="display: block"></span></td>
     <td>LEC</td>
     <td>5.5</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Henry</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Henry</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"></span></td>
     <td>VER</td>
     <td>6.0</td>
     <td>5.5</td>
@@ -161,78 +161,78 @@ permalink: /2022_2023/giornate/4/partite/2
     <th>FV</th>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Luis Maximiano</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_p.png" alt="P"> Luis Maximiano</span><span style="display: block"></span></td>
     <td>LAZ</td>
     <td>-</td>
     <td>-</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Milinkovic-Savic V.</span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"><img src="/assets/img/golSubito.png" alt="Gol Subito"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_p.png" alt="P"> Milinkovic-Savic V.</span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/golSubito.png" alt="Gol Subito"><img src="{{ site.baseurl }}/assets/img/golSubito.png" alt="Gol Subito"><img src="{{ site.baseurl }}/assets/img/golSubito.png" alt="Gol Subito"></span></td>
     <td>TOR</td>
     <td>6.0</td>
     <td>3.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Smalling</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> Smalling</span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"><img src="{{ site.baseurl }}/assets/img/golFatto.png" alt="Gol"></span></td>
     <td>ROM</td>
     <td>7.5</td>
     <td>10.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Gosens</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"><img src="/assets/img/in.webp" alt="Entrato"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Gosens</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"><img src="{{ site.baseurl }}/assets/img/in.webp" alt="Entrato"></span></td>
     <td>INT</td>
     <td>s.v</td>
     <td>s.v.</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Lucumì</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> Lucumì</span><span style="display: block"></span></td>
     <td>BOL</td>
     <td>-</td>
     <td>-</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Stojanovic</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> Stojanovic</span><span style="display: block"></span></td>
     <td>EMP</td>
     <td>4.5</td>
     <td>4.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Lopez M.</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> Lopez M.</span><span style="display: block"></span></td>
     <td>SAS</td>
     <td>6.5</td>
     <td>6.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Lobotka</b></span><span style="display: block"><img src="/assets/img/in.webp" alt="Entrato"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Lobotka</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/in.webp" alt="Entrato"></span></td>
     <td>NAP</td>
     <td>6.5</td>
     <td>6.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Mkhitaryan</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> Mkhitaryan</span><span style="display: block"></span></td>
     <td>INT</td>
     <td>6.0</td>
     <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Soriano</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> Soriano</span><span style="display: block"></span></td>
     <td>BOL</td>
     <td>5.5</td>
     <td>5.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Kean</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> Kean</span><span style="display: block"></span></td>
     <td>JUV</td>
     <td>-</td>
     <td>-</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Nzola</b></span><span style="display: block"><img src="/assets/img/in.webp" alt="Entrato"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Nzola</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/in.webp" alt="Entrato"></span></td>
     <td>SPE</td>
     <td>5.5</td>
     <td>5.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Di Francesco F.</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> Di Francesco F.</span><span style="display: block"></span></td>
     <td>LEC</td>
     <td>-</td>
     <td>-</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Satriano</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> Satriano</span><span style="display: block"></span></td>
     <td>EMP</td>
     <td>5.5</td>
     <td>5.5</td>
