--- a/stagioni/2022_2023/giornate/4/partite/3.html
+++ b/stagioni/2022_2023/giornate/4/partite/3.html
@@ -5,7 +5,7 @@ permalink: /2022_2023/giornate/4/partite/3
 ---
 
 <a href="..">Riepilogo</a>
-{% for item in site.data.stagione_2022_2023.giornata_4%}
+{% for item in site.data.stagione_2022_2023.giornata_4 %}
   || <a href="{{ item.id }}">
     {{ item.home }} ({{ item.score }}) {{ item.away }}
   </a>
@@ -27,122 +27,122 @@ permalink: /2022_2023/giornate/4/partite/3
     <th>FV</th>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> <b>Szczesny</b></span><span style="display: block"><img src="/assets/img/portiereImbattuto.png" alt="Portiere imbattuto"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_p.png" alt="P"> <b>Szczesny</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/portiereImbattuto.png" alt="Portiere imbattuto"></span></td>
     <td>JUV</td>
     <td>6.0</td>
     <td>7.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> <b>Handanovic</b></span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_p.png" alt="P"> <b>Handanovic</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/golSubito.png" alt="Gol Subito"><img src="{{ site.baseurl }}/assets/img/golSubito.png" alt="Gol Subito"></span></td>
     <td>INT</td>
     <td>5.0</td>
     <td>3.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Udogie</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Udogie</b></span><span style="display: block"></span></td>
     <td>UDI</td>
     <td>5.5</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Hateboer</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Hateboer</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"></span></td>
     <td>ATA</td>
     <td>5.5</td>
     <td>5.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Bastoni S.</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Bastoni S.</b></span><span style="display: block"></span></td>
     <td>SPE</td>
     <td>6.0</td>
     <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Toloi</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Toloi</b></span><span style="display: block"></span></td>
     <td>ATA</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Tomori</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Tomori</b></span><span style="display: block"></span></td>
     <td>MIL</td>
     <td>6.0</td>
     <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Demiral</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Demiral</b></span><span style="display: block"></span></td>
     <td>ATA</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Spinazzola</b></span><span style="display: block"><img src="/assets/img/assist.png" alt="Assist argento"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Spinazzola</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/assist.png" alt="Assist argento"></span></td>
     <td>ROM</td>
     <td>6.5</td>
     <td>7.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Danilo</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Danilo</b></span><span style="display: block"></span></td>
     <td>JUV</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Zaccagni</b></span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"><img src="/assets/img/assistGold.png" alt="Assist oro"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Zaccagni</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/golFatto.png" alt="Gol"><img src="{{ site.baseurl }}/assets/img/assistGold.png" alt="Assist oro"></span></td>
     <td>LAZ</td>
     <td>7.5</td>
     <td>12.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Malinovskyi</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Malinovskyi</b></span><span style="display: block"></span></td>
     <td>ATA</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Barak</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Barak</b></span><span style="display: block"></span></td>
     <td>FIO</td>
     <td>5.5</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Pasalic</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Pasalic</b></span><span style="display: block"></span></td>
     <td>ATA</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Politano</b></span><span style="display: block"><img src="/assets/img/assistSoft.png" alt="Assist bronzo"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Politano</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/assistSoft.png" alt="Assist bronzo"></span></td>
     <td>NAP</td>
     <td>6.5</td>
     <td>7.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Kostic</b></span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Kostic</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/golFatto.png" alt="Gol"></span></td>
     <td>JUV</td>
     <td>7.0</td>
     <td>10.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Dybala</b></span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Dybala</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/golFatto.png" alt="Gol"></span></td>
     <td>ROM</td>
     <td>7.0</td>
     <td>10.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Cuadrado</b></span><span style="display: block"><img src="/assets/img/assist.png" alt="Assist argento"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Cuadrado</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/assist.png" alt="Assist argento"></span></td>
     <td>JUV</td>
     <td>6.5</td>
     <td>7.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Milik</b></span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Milik</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/golFatto.png" alt="Gol"></span></td>
     <td>JUV</td>
     <td>7.0</td>
     <td>10.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Giroud</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Giroud</b></span><span style="display: block"></span></td>
     <td>MIL</td>
     <td>5.5</td>
     <td>5.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Beto</b></span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Beto</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/golFatto.png" alt="Gol"></span></td>
     <td>UDI</td>
     <td>7.0</td>
     <td>10.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Ceesay</b></span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Ceesay</b></span><span style="display: block"></span></td>
     <td>LEC</td>
     <td>5.5</td>
     <td>5.5</td>
@@ -161,78 +161,78 @@ permalink: /2022_2023/giornate/4/partite/3
     <th>FV</th>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Perin</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_p.png" alt="P"> Perin</span><span style="display: block"></span></td>
     <td>JUV</td>
     <td>-</td>
     <td>-</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Onana</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_p.png" alt="P"> Onana</span><span style="display: block"></span></td>
     <td>INT</td>
     <td>-</td>
     <td>-</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Carlos Augusto</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> Carlos Augusto</span><span style="display: block"></span></td>
     <td>MON</td>
     <td>6.0</td>
     <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Maehle</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> Maehle</span><span style="display: block"></span></td>
     <td>ATA</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Okoli</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> Okoli</span><span style="display: block"></span></td>
     <td>ATA</td>
     <td>6.5</td>
     <td>6.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> De Sciglio</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> De Sciglio</span><span style="display: block"></span></td>
     <td>JUV</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Maggiore</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> Maggiore</span><span style="display: block"></span></td>
     <td>SAL</td>
     <td>5.5</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Mckennie</span><span style="display: block"><img src="/assets/img/assist.png" alt="Assist argento"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> Mckennie</span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/assist.png" alt="Assist argento"></span></td>
     <td>JUV</td>
     <td>6.0</td>
     <td>7.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Makengo</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> Makengo</span><span style="display: block"></span></td>
     <td>UDI</td>
     <td>5.5</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Paredes</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> Paredes</span><span style="display: block"></span></td>
     <td>JUV</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Lookman</span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> Lookman</span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/golFatto.png" alt="Gol"></span></td>
     <td>ATA</td>
     <td>7.0</td>
     <td>10.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Locatelli</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> Locatelli</span><span style="display: block"></span></td>
     <td>JUV</td>
     <td>6.5</td>
     <td>6.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Colombo</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> Colombo</span><span style="display: block"></span></td>
     <td>LEC</td>
     <td>5.5</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Boga</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> Boga</span><span style="display: block"></span></td>
     <td>ATA</td>
     <td>-</td>
     <td>-</td>
