fix giornata page permalink

--- a/stagioni/2022_2023/giornate/4/4.html
+++ b/stagioni/2022_2023/giornate/4/4.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Giornata 4
-permalink: /2022_2023/giornate/4.html
+permalink: /2022_2023/giornate/4/
 ---
 
 <h1>Risultati</h1>
