--- a/stagioni/2022_2023/giornate/1/1.html
+++ b/stagioni/2022_2023/giornate/1/1.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Giornata 1
-permalink: /2022_2023/giornate/1.html
+permalink: /2022_2023/giornate/1/
 ---
 
 <h1>Risultati</h1>
