--- a/stagioni/2022_2023/giornate/2/2.html
+++ b/stagioni/2022_2023/giornate/2/2.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Giornata 2
-permalink: /2022_2023/giornate/2.html
+permalink: /2022_2023/giornate/2/
 ---
 
 <h1>Risultati</h1>
