--- a/stagioni/2022_2023/giornate/3/3.html
+++ b/stagioni/2022_2023/giornate/3/3.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Giornata 3
-permalink: /2022_2023/giornate/3.html
+permalink: /2022_2023/giornate/3/
 ---
 
 <h1>Risultati</h1>
