--- a/stagioni/2022_2023/giornate/5/5.html
+++ b/stagioni/2022_2023/giornate/5/5.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Giornata 5
-permalink: /2022_2023/giornate/5.html
+permalink: /2022_2023/giornate/5/
 ---
 
 <h1>Risultati</h1>
