Commit from GitHub Actions (Genera giornata)

--- a/stagioni/2022_2023/giornate/28/partite/5.html
+++ b/stagioni/2022_2023/giornate/28/partite/5.html
@@ -87,10 +87,10 @@ permalink: /2022_2023/giornate/28/partite/5
     <td>6.0</td>
     <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Luis Alberto</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/assist.png" alt="Assist argento"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Luis Alberto</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"><img src="{{ site.baseurl }}/assets/img/assist.png" alt="Assist argento"></span></td>
     <td>LAZ</td>
     <td>6.5</td>
-    <td>7.5</td>
+    <td>7.0</td>
   </tr>
   <tr>
     <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Zaccagni</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"></span></td>
@@ -257,6 +257,6 @@ permalink: /2022_2023/giornate/28/partite/5
   <tr>
     <td>66.0</td>
     <td style="text-align: center" colspan="7">Punti totali</td>
-    <td>73.5</td>
+    <td>73.0</td>
   </tr>
 </table>
