--- a/stagioni/2022_2023/mercati/asta_riparazione/asta_riparazione.html
+++ b/stagioni/2022_2023/mercati/asta_riparazione/asta_riparazione.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Asta iniziale 2022_2023
+title: Asta riparazione 2022_2023
 permalink: /2022_2023/mercati/asta_riparazione
 squadre: [1,2,3,4,5,6,7,8,9,10]
 ---
