update albo d'oro 2023

--- a/albo.html
+++ b/albo.html
@@ -12,7 +12,7 @@ permalink: /albo/
     </tr>
     <tr>
         <td>2022/2023</td>
-        <td>TBD</td>
+        <td>Paris Saint Germano</td>
         <td>Real Pollo</td>
     </tr>
     <tr>
