aggiornato albo d'oro 2023/2024

--- a/albo.html
+++ b/albo.html
@@ -9,6 +9,15 @@ permalink: /albo/
         <th>Stagione</th>
         <th>Campionato</th>
         <th>Coppa Box</th>
+        <th>Super Coppa Box</th>
+        <th>Coppa Hunger Games</th>
+    </tr>
+    <tr>
+        <td>2023/2024</td>
+        <td>REAL DAVID</td>
+        <td>Owl City</td>
+        <td>Paris Saint Germano</td>
+        <td>REAL DAVID</td>
     </tr>
     <tr>
         <td>2022/2023</td>
@@ -28,21 +37,17 @@ permalink: /albo/
     <tr>
         <td>2019/2020</td>
         <td>Patetico Mineiro</td>
-        <td></td>
     </tr>
     <tr>
         <td>2018/2019</td>
         <td>Pompy FC</td>
-        <td></td>
     </tr>
     <tr>
         <td>2017/2018</td>
         <td>Pompy FC</td>
-        <td></td>
     </tr>
     <tr>
         <td>2016/2017</td>
         <td>Real Pollo</td>
-        <td></td>
     </tr>
 <table>
